--- a/resources/server.properties
+++ b/resources/server.properties
@@ -30,6 +30,7 @@ broker.id.generation.enable=true
 #   EXAMPLE:
 #     listeners = PLAINTEXT://your.host.name:9092
 #listeners=PLAINTEXT://:9092
+listeners=PLAINTEXT://$NODE_NAME:9092
 
 # Hostname and port the broker will advertise to producers and consumers. If not set, 
 # it uses the value for "listeners" if configured.  Otherwise, it will use the value
