--- a/resources/keta.properties
+++ b/resources/keta.properties
@@ -23,7 +23,7 @@ cluster.group.id=keta
 
 # Use this setting to specify the bootstrap servers for your Kafka cluster and it
 # will be used both for selecting the leader instance and for storing data.
-kafkacache.bootstrap.servers=localhost:9092
+kafkacache.bootstrap.servers=n1:9092,n2:9092,n3:9092,n4:9092,n5:9092
 
 # The group ID to be used for internal consumers, which needs to be unique for each node.
 kafkacache.group.id=keta-$NODE_NAME
