Fix replication factor

--- a/resources/keta.properties
+++ b/resources/keta.properties
@@ -39,3 +39,7 @@ kafkacache.checkpoint.dir=/tmp/keta
 
 # If true, API requests that fail will include extra debugging information, including stack traces
 debug=false
+
+# For testing
+kafkacache.topic.replication.factor=5
+kafkacache.topic.require.compact=false
