Remove unused fns

--- a/resources/keta.properties
+++ b/resources/keta.properties
@@ -40,6 +40,8 @@ kafkacache.checkpoint.dir=/tmp/keta
 # If true, API requests that fail will include extra debugging information, including stack traces
 debug=false
 
-# For testing
+# Ensure full replication
 kafkacache.topic.replication.factor=5
+
+# For testing
 kafkacache.topic.require.compact=false
