--- a/resources/keta.properties
+++ b/resources/keta.properties
@@ -40,6 +40,9 @@ kafkacache.checkpoint.dir=/tmp/keta
 # If true, API requests that fail will include extra debugging information, including stack traces
 debug=false
 
+# Reduce timeout
+kafkacache.timeout.ms=2000
+
 # Ensure full replication
 kafkacache.topic.replication.factor=5
 
