--- a/resources/keta.properties
+++ b/resources/keta.properties
@@ -29,7 +29,7 @@ kafkacache.bootstrap.servers=n1:9092,n2:9092,n3:9092,n4:9092,n5:9092
 kafkacache.group.id=keta-$NODE_NAME
 
 # The backing cache
-kafkacache.backing.cache=rocksdb
+kafkacache.backing.cache=memory
 
 # The root directory for backing cache storage
 kafkacache.data.dir=/tmp/keta
