--- a/resources/server.properties
+++ b/resources/server.properties
@@ -136,5 +136,8 @@ zookeeper.connection.timeout.ms=18000
 # However, in production environments the default value of 3 seconds is more suitable as this will help to avoid unnecessary, and potentially expensive, rebalances during application startup.
 group.initial.rebalance.delay.ms=0
 
+# Set min insync replicas to a majority
+min.insync.replicas=3
+
 # Disable unclean leader election
 unclean.leader.election.enable=false
