Turn off topic auto creation

--- a/resources/server.properties
+++ b/resources/server.properties
@@ -141,3 +141,6 @@ min.insync.replicas=3
 
 # Disable unclean leader election
 unclean.leader.election.enable=false
+
+# Disable topic auto-creation
+auto.create.topics.enable=false
