--- a/resources/server.properties
+++ b/resources/server.properties
@@ -73,6 +73,7 @@ num.recovery.threads.per.data.dir=1
 # The replication factor for the group metadata internal topics "__consumer_offsets" and "__transaction_state"
 # For anything other than development testing, a value greater than 1 is recommended to ensure availability such as 3.
 offsets.topic.replication.factor=5
+offsets.topic.num.partitions=1
 transaction.state.log.replication.factor=5
 transaction.state.log.min.isr=1
 
