Remove majorities-ring

--- a/resources/keta.properties
+++ b/resources/keta.properties
@@ -48,3 +48,9 @@ kafkacache.topic.replication.factor=5
 
 # For testing
 kafkacache.topic.require.compact=false
+
+# Reduce heartbeat interval
+kafkacache.heartbeat.interval.ms=1000
+
+# Reduce session timeout
+kafkacache.session.timeout.ms=3000
