--- a/resources/server.properties
+++ b/resources/server.properties
@@ -145,3 +145,13 @@ unclean.leader.election.enable=false
 
 # Disable topic auto-creation
 auto.create.topics.enable=false
+
+# Allow for smaller session timeout
+group.min.session.timeout.ms=3000
+
+# Restore replica lag from Kafka 2.4
+replica.lag.time.max.ms=10000
+
+# Restore ZooKeeper timeout from Kafka 2.4
+zookeeper.session.timeout.ms=6000
+
