Skip topic verify

--- a/resources/keta.properties
+++ b/resources/keta.properties
@@ -47,7 +47,7 @@ kafkacache.timeout.ms=2000
 kafkacache.topic.replication.factor=5
 
 # For testing
-kafkacache.topic.require.compact=false
+kafkacache.topic.skip.verify=true
 
 # Reduce heartbeat interval
 kafkacache.heartbeat.interval.ms=1000
