Use validation flag

--- a/resources/keta.properties
+++ b/resources/keta.properties
@@ -47,6 +47,8 @@ kafkacache.timeout.ms=2000
 kafkacache.topic.replication.factor=5
 
 # For testing
+kafkacache.topic.skip.validation=true
+# TODO: Remove the following
 kafkacache.topic.skip.verify=true
 
 # Reduce heartbeat interval
